# batch-amici

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  Synthetic_Data_Gen.py  Synthetic_Data_Prep.py  compare_models.py  debug_folder.py  inspect_dataset.py  pyproject.toml  quick_batch_check.py  train_ba_amici.py  train_baseline.py  valdiate_batch_mixing.py
ba_amici_benchmark/: replicate_07.json
benchmarks/: Snakefile  __init__.py  amici_benchmark_utils.py  benchmark_config.yaml  benchmark_utils.py  generate_dataset.py  gitiii_benchmark_utils.py  ncem_benchmark_utils.py  train_amici_model.py  train_ba_amici.py  train_baseline.py  train_cgcom_model.py  train_gitiii_model.py  train_ncem_model.py  validate_batch_correction.py
benchmarks/ba_amici_benchmark/: __init__.py  ba_amici_benchmark_pipeline.py  diagnose_ba_amici.py
benchmarks/ba_amici_benchmark/data_generation/: __init__.py  semisynthetic_batch_generator.py
benchmarks/ba_amici_benchmark/evaluation/: __init__.py  interaction_consistency_evaluator.py
benchmarks/envs/: amici.yaml  basic.yaml  cgcom.yaml  gitiii.yaml  ncem.yaml  nichede.yaml
benchmarks/gene_task/: generate_amici_pr.py  generate_amici_scores.py  generate_gitiii_pr.py  generate_gitiii_scores.py  generate_gt_gene_scores.py  generate_ncem_pr.py  generate_ncem_scores.py  generate_nichede_pr.py  generate_nichede_scores.R  plot_boxplots.py  plot_pr_curves.py
benchmarks/length_scale_task/: plot_kde.py
benchmarks/mouse/: build_mouse_graph.py  eval_mouse_ba_amici.py  eval_mouse_baseline.py  preprocess_mouse.py  train_mouse_ba_amici.py  train_mouse_baseline.py
benchmarks/neighbor_interaction_task/: generate_amici_pr.py  generate_amici_scores.py  generate_cgcom_pr.py  generate_cgcom_scores copy.py  generate_cgcom_scores.py  generate_gitiii_pr.py  generate_gitiii_scores.py  generate_gt_neighbor_interaction_scores.py  plot_boxplots.py  plot_pr_curves.py
benchmarks/pbmc_data/: Synthetic_Data_Gen.py  Synthetic_Data_Prep.py  semisynthetic_data_gen_v2.py
benchmarks/receiver_subtype_task/: generate_amici_pr.py  generate_amici_scores.py  generate_cgcom_pr.py  generate_cgcom_scores.py  generate_gitiii_pr.py  generate_gitiii_scores.py  generate_gt_receiver_subtype_scores.py  plot_boxplots.py  plot_pr_curves.py
benchmarks/semi_synthetic_training/: train_ba_amici.py  train_ba_amici_debug.py  train_baseline.py  validate_batch_correction.py
benchmarks/xenium_mouse/: build_xenium_mouse_graph.py  eval_xenium_mouse_ba_amici.py  eval_xenium_mouse_baseline.py  preprocess_xenium_mouse.py  train_xenium_ba_amici.py  train_xenium_mouse_baseline.py
cortex/: cortex_analysis.py  cortex_preprocess.py  cortex_sweep.yaml  cortex_sweep_main.py  run_cortex_sweep.sh
cosmx/: preprocess_cosmx.py  train_cosmx.py  tune_cosmx.py
docs/: Makefile  conf.py  index.rst
docs/_static/: custom.css
docs/api/: index.rst
examples/: basic_usage.ipynb
src/amici/: __init__.py  _anndataloader.py  _anntorchdataset.py  _components.py  _constants.py  _model.py  _module.py  _utils.py  _wandb_training_mixin.py  _wandb_trainrunner.py  adversarial.py  batch_attention.py  graph.py  graph_v2.py
src/amici/callbacks/: __init__.py  _callbacks.py  lambda_adv_warmup.py
src/amici/interpretation/: __init__.py  _ablation_module.py  _attention_module.py  _counterfactual_attention_module.py  _explained_variance_module.py  _utils.py
src/amici/tools/: __init__.py  _data_utils.py  pbmc_synthetic.py  (+1 more)
tests/: test_attention.py  test_model.py
xenium/: run_xenium_sweep.sh  segmentation_analysis.py  xenium_analysis.py  xenium_niche_analysis.py  xenium_preprocess.py  xenium_replicate_validation.py  xenium_spatial_analysis.py  xenium_subtyping_analysis.py  xenium_sweep.yaml  xenium_sweep_main.py  xenium_train.py
