[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
include = [
    "src/amici/*.py",
    "src/amici/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amici"]

[project]
name = "amici-st"
version = "0.1.0"
description = "Cross-attention-based cell-cell interaction inference from ST data."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Justin Hong"},
    {name = "Khushi Desai"},
]
maintainers = [
    {name = "Justin Hong", email = "justin.hong@columbia.edu"},
    {name = "Khushi Desai", email = "kpd2137@gmail.com"},
]
urls.Source = "https://github.com/azizilab/amici"
urls.Home-page = "https://github.com/azizilab/amici"
dependencies = [
    "anndata",
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "scipy<=1.12.0",
    "scvi-tools==1.2.2",
    "scanpy",
    "scikit-learn",
    "typeguard", # missing dep for jaxtyping
    "pooch", # missing dep for scvi-tools
    "einops",
    "xarray",
    "transformer-lens==1.14.0",
    "wandb",
    "numpy",
    # visualization
    "matplotlib",
    "seaborn",
    "openchord",
    # for debug logging (referenced from the issue template)
    "session-info",
    # due to transformer-lens dependency
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "twine>=4.0.2",
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
    "pandas",
]
test = [
    "coverage",
]

[tool.coverage.run]
source = ["amici"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.ruff]
src = ["src"]
line-length = 120
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    "D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
]
